minor edit, tentang

--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
     <section id="tentang" class="text-center text-[10px] text-slate-500 mt-2">
       <p>
         Disusun sebagai media pembelajaran PAI modern untuk siswa SMA/SMK.
-        Gambar dapat diisi dengan ilustrasi tokoh, kitab, atau aktivitas keilmuan.
       </p>
       <p class="mt-1">
-        &copy; 2025 · Nama Siswa / Kelas / Mapel PAI
+        &copy; 2025 · 25 GUNAWAN WIBISANA / 12 SIJA A / Mapel PAI
+        &copy; 2025 · 28 ILHAM NURHIDAYAT / 12 SIJA A / Mapel PAI
       </p>
     </section>
 
